2000-12-14   Daiki Ueno  <ueno@unixuser.org>

	* alist.el (del-alist): Simplified.

2000-12-14  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* pym.el (static-if): Put t on edebug spec instead of if.

2000-12-13  Kenichi Handa  <handa@etl.go.jp>

	* alist.el: Fix and add DOCs and comments; fix coding style.

2000-04-26  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mcs-xm.el (charsets-mime-charset-alist): Add coded-charset
	`japanese-jisx0208-1990' to MIME-charset `iso-2022-jp' and
	`iso-2022-jp-2' in UTF-2000; add new MIME-charset `iso-2022-jp-3'.

2000-11-26  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* make.bat: New file.
	* .cvsignore: Ditto.

2000-11-09  Katsumi Yamaoka   <yamaoka@jpl.org>

	* path-util.el (add-path): Check for both "path" and "path/".

2000-10-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (require): Update `current-load-list'.

2000-10-10  Keiichi Suzuki  <keiichi@mdcnet.co.jp>

	* product.el (product-version-as-string): New function.
	(product-string-1): Use `product-version-as-string'.

2000-08-10  MORIOKA Tomohiko  <tomo@m17n.org>

	* poem-e20_3.el: Require `pym'.

2000-07-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* alist.el (vassoc): New function [to be compatible with XEmacs
	21.2.32 or later].

2000-05-25  Tanaka Akira      <akr@m17n.org>

	* README.en, README.ja: Update for CVS via SSH.

2000-05-24  Katsumi Yamaoka   <yamaoka@jpl.org>

	* pces-raw.el (encode-coding-string, decode-coding-string): Return
	a copy of string.

2000-04-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* EMU-ELS (emu-modules): Don't include `pccl-20' for XEmacs 20 and
	earlier.

2000-03-25  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* pym.el: Define edebug specs for `static-if', `static-when',
	`static-unless', `static-condition-case', `static-defconst' and
	`static-cond'.

2000-03-08  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* poe.el (format-time-string): Fix problem when `format' contains
	"%d" or "%D".
